tests/neg/unused-case-class.scala
case class Foo1(unused x: Int) // error
